# timers

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: gtest.cmake  settings.cmake  warnings.cmake
cmake-helpers/: CMakeLists.txt  gtest.cmake  messages.cmake  pthreads.cmake  settings.cmake  threads.cmake  versions.cmake  warnings.cmake
example/: CMakeLists.txt
example/cpp11/: CMakeLists.txt
example/cpp11/src/: main.cpp
example/cpp14/: CMakeLists.txt
example/src/: main.cpp
include/timers/: async.h  async.hpp  blocking.h  blocking.hpp  common.h  disable_copy_and_move.h  exceptions.h  exceptions.hpp  periodic.h  periodic.hpp  periodic_async.h  periodic_async.hpp  policies.h  return_type_traits.h  scoped.h  scoped.hpp  single_shot.h  single_shot.hpp  single_shot_async.h  single_shot_async.hpp  type_definitions.h  type_definitions.hpp  type_traits.h
include/timers/private/: disable_copy.h  disable_move.h  type_traits.h
src/: main.cpp
tests/: CMakeLists.txt
tests/include/: common.h  make_all_members_public.h  static_assertions.h  time_utils.h
tests/src/: blocking.test.cpp  periodic.test.cpp  single_shot.test.cpp
tests/unit/: CMakeLists.txt
tests/unit/include/: make_all_members_public.h  static_assertions.h  test_utils.h  time_utils.h
tests/unit/src/: blocking.test.cpp  blocking_test.cpp  exceptions.test.cpp  exceptions_test.cpp  periodic.test.cpp  periodic_async.test.cpp  periodic_async_test.cpp  periodic_test.cpp  policies.test.cpp  policies_test.cpp  scoped.test.cpp  scoped_test.cpp  single_shot.test.cpp  single_shot_async.test.cpp  single_shot_async_test.cpp  single_shot_test.cpp  test_utils.cpp  time_utils.cpp
